--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-typescript-parcel",
+  "name": "vue-reversi",
   "version": "0.0.1",
   "description": "",
   "main": "./src/index.js",
